--- a/wip/system.js.html
+++ b/wip/system.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FirefoxOS - SystemApp - API documentation : Source: wrapper_factory.js</title>
+    <title>FirefoxOS - SystemApp - API documentation : Source: system.js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -39,7 +39,7 @@
           </div>
 
           <div class="span8">
-              <h1 class="page-header">Source: wrapper_factory.js</h1>
+              <h1 class="page-header">Source: system.js</h1>
               
 
 
@@ -49,166 +49,64 @@
             <pre class="prettyprint source"><code>'use strict';
 
 (function(window) {
+  var DEBUG = false;
   /**
-   * WrapperFactory deals with opening a window for bookmarked web page.
-   * Usually the request is coming from homescreen app.
-   * @module WrapperFactory
+   * Shared some global property.
+   * @type {Object}
+   * @module  System
    */
-  var WrapperFactory = {
-    init: function wf_init() {
-      window.addEventListener('mozbrowseropenwindow', this, true);
-      // Use capture in order to catch the event before PopupManager does
+  window.System = {
+    /**
+     * Record the start time of the system for later debugging usage.
+     * @access private
+     * @type {Number}
+     * @memberOf module:System
+     */
+    _start: new Date().getTime() / 1000,
+
+    /**
+     * Get current time offset from the start.
+     * @return {Number} The time offset
+     * @memberOf module:System
+     */
+    currentTime: function() {
+      return (new Date().getTime() / 1000 - this._start).toFixed(3);
     },
 
-    handleEvent: function wf_handleEvent(evt) {
-      var detail = evt.detail;
+    /**
+     * Enable slow transition or not for debugging.
+     * @type {Boolean}
+     * @memberOf module:System
+     */
+    slowTransition: false,
 
-      // If it's a normal window.open request, ignore.
-      if (typeof detail.features !== 'string')
-        return;
-
-      // Turn ',' separated 'key=value' string into object for easy access
-      var features = detail.features
-        .split(',')
-        .reduce(function(acc, feature) {
-          feature = feature
-            .split('=')
-            .map(function(featureElem) { return featureElem.trim(); });
-          if (feature.length !== 2)
-            return acc;
-
-          acc[decodeURIComponent(feature[0])] = decodeURIComponent(feature[1]);
-          return acc;
-        }, {});
-
-      // Handles only call to window.open with `remote=true` feature.
-      if (!('remote' in features) || features['remote'] !== 'true')
-        return;
-
-      // Examine permission
-      // XXX: Ask app window about this.
-      var callerIframe = evt.target;
-      var callerFrame = callerIframe.parentNode;
-      var manifestURL = callerIframe.getAttribute('mozapp');
-      var callerApp = Applications.getByManifestURL(manifestURL);
-      if (!this.hasPermission(callerApp, 'open-remote-window'))
-        return;
-
-      // So, we are going to open a remote window.
-      // Now, avoid PopupManager listener to be fired.
-      evt.stopImmediatePropagation();
-
-      var callerOrigin = callerApp.origin;
-      var name = detail.name;
-      var url = detail.url;
-
-      // Use fake origin for named windows in order to be able to reuse them,
-      // otherwise always open a new window for '_blank'.
-      var origin = null;
-      var app = null;
-      var runningApps = AppWindowManager.runningApps;
-      if (name == '_blank') {
-        origin = url;
-
-        // Just bring on top if a wrapper window is
-        // already running with this url.
-        if (origin in runningApps &amp;&amp;
-            runningApps[origin].windowName == '_blank') {
-          this.publish('displayapp', { origin: origin });
-        }
-      } else {
-        origin = 'window:' + name + ',source:' + callerOrigin;
-
-        var runningApp = runningApps[origin];
-        if (runningApp &amp;&amp; runningApp.windowName === name) {
-          if (runningApp.iframe.src === url) {
-            // If the url is already loaded, just display the app
-            this.publish('displayapp', { origin: origin });
-            return;
-          } else {
-            // Wrapper context shouldn't be shared between two apps -> killing
-            this.publish('killapp', { origin: origin });
-          }
-        }
-      }
-
-      // TODO: Put this into browser_config_helper.
-      var browser_config = this.generateBrowserConfig(features);
-
-      // If we don't reuse an existing app, open a brand new one
-      browser_config.url = url;
-      browser_config.origin = origin;
-      browser_config.windowName = name;
-      if (!browser_config.title)
-        browser_config.title = url;
-
-      this.launchWrapper(browser_config);
-    },
-
-    launchWrapper: function wf_launchWrapper(config) {
-      var app = AppWindowManager.runningApps[config.origin];
-      var iframe;
-      if (!app) {
-        config.chrome = {
-          navigation: true,
-          rocketbar: false
-        };
-        app = new AppWindow(config);
-      } else {
-        iframe = app.iframe;
-
-        // XXX: Move this into app window.
-        // Do not touch the name here directly.
-        // Update app name for the card view
-        app.manifest ? (app.manifest.name = config.title) :
-                        (app.name = config.title);
-      }
-
-      this.publish('displayapp', { origin: config.origin });
-    },
-
-    hasPermission: function wf_hasPermission(app, permission) {
-      var mozPerms = navigator.mozPermissionSettings;
-      if (!mozPerms)
-        return false;
-
-      var value = mozPerms.get(permission, app.manifestURL, app.origin, false);
-
-      return (value === 'allow');
-    },
-
-    generateBrowserConfig: function wf_generateBrowserConfig(features) {
-      var config = {};
-      config.title = features.name;
-      config.icon = features.icon || '';
-
-      if ('originName' in features) {
-        config.originName = features.originName;
-        config.originURL = features.originUrl;
-      }
-
-      if ('searchName' in features) {
-        config.searchName = features.searchName;
-        config.searchURL = features.searchUrl;
-      }
-
-      if ('useAsyncPanZoom' in features &amp;&amp;
-          features.useAsyncPanZoom === 'true') {
-        config.useAsyncPanZoom = true;
-      } else {
-        config.useAsyncPanZoom = false;
-      }
-
-      return config;
-    },
-
-    publish: function wf_publish(event, detail) {
-      var evt = new CustomEvent(event, { detail: detail });
+    publish: function sys_publish(eventName, detail) {
+      var evt = new CustomeEvent(eventName, { detail: detail });
       window.dispatchEvent(evt);
+    },
+
+    debug: function sys_debug() {
+      if (DEBUG) {
+        console.log('[System]' +
+          '[' + System.currentTime() + ']' +
+          Array.slice(arguments).concat());
+      }
+    },
+
+    forceDebug: function sys_debug() {
+      console.log('[System]' +
+        '[' + System.currentTime() + ']' +
+        Array.slice(arguments).concat());
+    },
+
+    _dump: function sys__dump() {
+      try {
+        throw new Error('dump');
+      } catch (e) {
+        console.log(e.stack);
+      }
     }
   };
-
-  WrapperFactory.init();
 }(this));
 </code></pre>
         </article>
